finsihed daniel, some cleanup to do, gotta figur eout profiles i guess, maybe just leave it that way?

--- a/_profiles/96Daniel Moniz.html
+++ b/_profiles/96Daniel Moniz.html
@@ -1,15 +1,16 @@
 ---
 layout: profile
 
-profileImage: /assets/images/portraits/daniel_moniz/daniel_moniz_profile.jpg
+profileImage: /assets/images/portraits/daniel_moniz/daniel_moniz-home.jpg
 firstName: Daniel
 lastName: Moniz
-occupation: Software Engineer | Instructor | Improv Artist
+occupation: Software Engineer • Instructor • Improv Artist
 factCategory: Winner of the Space Race
 factFact: USSR
 playlistLink: https://www.youtube.com/watch?v=_FrOQC-zEog&list=PLqLfWv6bj-W39fQOfLrhm2PYiSAp8Z1rU
 
-headImage: /assets/images/portraits/daniel_moniz/daniel_moniz_p.jpg
+shadowImage: /assets/images/portraits/daniel_moniz/daniel_moniz-shadow.jpg
+headImage: /assets/images/portraits/daniel_moniz/daniel_moniz-profile.jpg
 images: /assets/images/portraits/daniel_moniz/daniel_moniz-
 quote1: I developed a philosophy over time where every day has to have a chore.
 quote2: I mean it might be nice getting a heads up about the technological singularity or something
@@ -25,11 +26,17 @@ quote5: It’s not up to you what entertainment means, it’s up to the entertai
 
 <h3 class="question">You tripped on something or?</h3>
 
-<p>No no, I was just pushing a lawn mower <i>(laughs)</i>... just the worst, so... yeah. At that point, it was a bit of a crisis, and I didn’t really do anything for a bit. I basically played Starcraft for about 8 months. Starcraft 2. I got pretty good! Was in diamond when diamond was the highest league, but then it hit me that I needed to get a job. Either I get better... like I spend more than two hours a day on Starcraft, or I get a job, but not both. I don’t like doing something.. moderately? I like to do something to get better at it. So I basically went cold turkey on Starcraft, which was surprisingly difficult, and then I started applying like crazy. Basically offered to work for free, doing some kind of mathematical related work, because I had no experience otherwise. Basically, a CEO picked me up, was like, “Hey, I’ll pay you minimum wage, you can look for another job, just be transparent with me”. I lived with my parents, I saved every dollar for 6 months. And I got an interest in software development. I rekindled that interest within that time, because I’d done it throughout - a little bit in university and high school. In that period, I rekindled that interest and dove in, and that set me on my current path.</p>
+<p>No no, I was just pushing a lawn mower... [laughs] just the worst, so... yeah. At that point, it was a bit of a crisis, and I didn’t really do anything for a bit. I basically played Starcraft for about 8 months. Starcraft 2. I got pretty good! Was in diamond when diamond was the highest league, but then it hit me that I needed to get a job. Either I get better... like I spend more than two hours a day on Starcraft, or I get a job, but not both. I don’t like doing something.. moderately? I like to do something to get better at it. So I basically went cold turkey on Starcraft, which was surprisingly difficult, and then I started applying like crazy. Basically offered to work for free, doing some kind of mathematical related work, because I had no experience otherwise. Basically, a CEO picked me up, was like, “Hey, I’ll pay you minimum wage, you can look for another job, just be transparent with me”. I lived with my parents, I saved every dollar for 6 months. And I got an interest in software development. I rekindled that interest within that time, because I’d done it throughout - a little bit in university and high school. In that period, I rekindled that interest and dove in, and that set me on my current path.</p>
 
 <h3 class="question">What are some problems that you run into now and then that you don't think other people might experience?</h3>
 
 <p>I don’t think people are used to the degree of... sort of abstract, logical thought that is required to do something like math or programming. Now that doesn’t mean I think that a lot of people can’t do it, but they just wouldn’t be used to it. That’s part of why coding bootcamps are such a brutal 12 weeks; people are like, “Whoa, I didn’t realize I had to think like this”, and it’s hard to change the way you think. So I think just... that day-to-day and thinking through problems is exhausting—it takes a lot of emotional energy.</p>
+
+<div class="profile_imgs">
+  <a href="{{ page.images }}5.jpg" data-lightbox="daniel-1">
+    <img src="{{ page.images }}5.jpg" alt="sexy boy">
+  </a>
+</div>
 
 <h3 class="question">Given the choice of anyone in the world, dead or alive, who would you invite to a dinner party? Why?</h3>
 
@@ -37,7 +44,7 @@ quote5: It’s not up to you what entertainment means, it’s up to the entertai
 
 <h3 class="question">Would you like to be famous one day? If so in what way, if not, why?</h3>
 
-<p>Yeah I wouldn’t mind. I wouldn’t wanna be too famous, but it’s.. the vanity in me wouldn’t mind my name being known <i>(smiles vainly).</i> One of the side projects I have is developing a board game. I’ve been doing that for a few years. It’s very close. But I... again the vanity in me just wants... I mean I want the board game published, but I want it to say “Designed by Daniel Moniz” on it. So it’s like, “Hey, who’s that guy?”, and then I can have interesting chats with people, help them out and that kind of thing. That’d be cool, yeah... but being stopped on the street, less cool.</p>
+<p>Yeah I wouldn’t mind. I wouldn’t wanna be too famous, but it’s.. the vanity in me wouldn’t mind my name being known. [smiles] One of the side projects I have is developing a board game. I’ve been doing that for a few years. It’s very close. But I... again the vanity in me just wants... I mean I want the board game published, but I want it to say “Designed by Daniel Moniz” on it. So it’s like, “Hey, who’s that guy?”, and then I can have interesting chats with people, help them out and that kind of thing. That’d be cool, yeah... but being stopped on the street, less cool.</p>
 
 <div class="quote">
   <hr>
@@ -51,12 +58,12 @@ quote5: It’s not up to you what entertainment means, it’s up to the entertai
 
 <div class="profile-double-container">
   <div class="profile_imgs">
-    <a href="{{ page.images }}3.jpg" data-lightbox="daniel-1">
+    <a href="{{ page.images }}3.jpg" data-lightbox="daniel-2">
       <img src="{{ page.images }}3.jpg" alt="sexy guy">
     </a>
   </div>
   <div class="profile_imgs">
-    <a href="{{ page.images }}4.jpg" data-lightbox="daniel-1">
+    <a href="{{ page.images }}4.jpg" data-lightbox="daniel-2">
       <img src="{{ page.images }}4.jpg" alt="sexy guy">
     </a>
   </div>
@@ -72,7 +79,7 @@ quote5: It’s not up to you what entertainment means, it’s up to the entertai
 
 <h3 class="question">If you could wake up and gain any ability/character trait, what would it be? Why?</h3>
 
-<p>I like to consider myself fairly well-rounded, but there’s a couple gaping holes. It’s a combination of things... it’s sort of directional sense, like a visual sense, and I tend to not look around. I mean I can do it, I can turn it on, but I don’t turn it on enough. So if it’s like, if I come in at an intersection from another direction—I might not know where I am and I’m really confused, like, “Wait, where am I again?”. It would be nice to take in my surroundings. Just be aware, there’s just so many things to be aware of and doing that puts you in the moment. I think that makes people happier. But instead I tend to look at... I look at all the people walking by <i>(points at people behind)</i>. We live in this world of people and it’s like, well... there’s other things to look at. Like, imagine I walked to work and then I was trying to describe it to someone how to get there. It would take me a bit. I mean, I could do the streets, but what did I see? And I don’t remember.</p>
+<p>I like to consider myself fairly well-rounded, but there’s a couple gaping holes. It’s a combination of things... it’s sort of directional sense, like a visual sense, and I tend to not look around. I mean I can do it, I can turn it on, but I don’t turn it on enough. So if it’s like, if I come in at an intersection from another direction—I might not know where I am and I’m really confused, like, “Wait, where am I again?”. It would be nice to take in my surroundings. Just be aware, there’s just so many things to be aware of and doing that puts you in the moment. I think that makes people happier. But instead I tend to look at... I look at all the people walking by. [points at people behind] We live in this world of people and it’s like, well... there’s other things to look at. Like, imagine I walked to work and then I was trying to describe it to someone how to get there. It would take me a bit. I mean, I could do the streets, but what did I see? And I don’t remember.</p>
 
 
 <div class="quote to-fade-up">
@@ -86,23 +93,23 @@ quote5: It’s not up to you what entertainment means, it’s up to the entertai
 <p>What would I want to know... I’m winging it, man! I don’t know... I mean it might be nice getting a heads up about the technological singularity or something but... by and large, I’m alright. I’m just gonna keep winging it. I don’t need to know anything.</p>
 
 <div class="profile_imgs">
-  <a href="{{ page.images }}14.jpg" data-lightbox="daniel-2">
+  <a href="{{ page.images }}14.jpg" data-lightbox="daniel-3">
     <img src="{{ page.images }}14.jpg" alt="sexy boy">
   </a>
 </div>
 
 <h3 class="question">What do you value most in your friendships? Can you describe a best friend?</h3>
 
-<p>Sure, I make no secret that I work hard to surround myself with... amazing people. Just really high caliber people, I use a term - I just call them “quality people”. I also don’t make it a secret that I’m very quick to judge people on this front. It’s usually the first meeting or two. And honestly sometimes within a couple of minutes... when I see someone... I don’t know what it is, there’s obviously a whole bunch of unconscious biases, but things like: eye contact <i>(intense eye contact)</i>, assertiveness. Sometimes I meet people and something just clicks right away. That’s 100% the same with my girlfriend. We met dancing, and she had eye contact that was... un-breaking. I don’t think I identified that that’s what it was at the time, but I was thinking, “This person is so intense. I have to get to know this person.” So I think I look for a certain intensity in people, but also just pure honesty. So if I call you and want to hang out, and you don’t want to... I rather you just say, “Ahh, I’m not feeling it today”... “Cool! No problem, have a good day. Let me know if I can do anything”. Then there’s no... there’s no lying. So I’ve just surrounded myself with extremely honest people, which makes life drama free!</p>
+<p>Sure, I make no secret that I work hard to surround myself with... amazing people. Just really high caliber people, I use a term - I just call them “quality people”. I also don’t make it a secret that I’m very quick to judge people on this front. It’s usually the first meeting or two. And honestly sometimes within a couple of minutes... when I see someone... I don’t know what it is, there’s obviously a whole bunch of unconscious biases, but things like: eye contact, [intense eye contact] assertiveness. Sometimes I meet people and something just clicks right away. That’s 100% the same with my girlfriend. We met dancing, and she had eye contact that was... un-breaking. I don’t think I identified that that’s what it was at the time, but I was thinking, “This person is so intense. I have to get to know this person.” So I think I look for a certain intensity in people, but also just pure honesty. So if I call you and want to hang out, and you don’t want to... I rather you just say, “Ahh, I’m not feeling it today”... “Cool! No problem, have a good day. Let me know if I can do anything”. Then there’s no... there’s no lying. So I’ve just surrounded myself with extremely honest people, which makes life drama free!</p>
 
 <p>In terms of a best friend, I have a few and I mean... generally they’re people that can play games with me—that’s usually the common thread. We can sit down for a board game, a video game and be silly when needed, or be really analytical when needed. I think my best friends tend to be analytical and we can have a ball doing it.</p>
 
 <h3 class="question">What is your most treasured memory?</h3>
 
-<p>Probably what would... could be argued to be my first date with June? We had a... we met and we spent a whole day together, and it was a beautiful summer day in Toronto by the Lakeshore, we did a bunch of random things like... there was some mini Cirque du Soleil thing going on at the stage. We went to the distillery and we saw a magician. We went to her place and watched a movie, and it was such a full, perfect memory day... yeah... <i>(smiles warmly)</i>.</p>
+<p>Probably what would... could be argued to be my first date with June? We had a... we met and we spent a whole day together, and it was a beautiful summer day in Toronto by the Lakeshore, we did a bunch of random things like... there was some mini Cirque du Soleil thing going on at the stage. We went to the distillery and we saw a magician. We went to her place and watched a movie, and it was such a full, perfect memory day... [smiles]</p>
 
 <div class="profile_imgs">
-  <a href="{{ page.images }}6.jpg" data-lightbox="daniel-3">
+  <a href="{{ page.images }}6.jpg" data-lightbox="daniel-4">
     <img src="{{ page.images }}6.jpg" alt="sexy boy">
   </a>
 </div>
@@ -140,14 +147,14 @@ quote5: It’s not up to you what entertainment means, it’s up to the entertai
   <hr>
 </div>
 
-<p>I’m pretty self aware, and I’ve had to be, just because my brain doesn’t... for example I was never very intelligent socially. I had to basically work on that. In order to just get through, I’ve had to find my weaknesses and systematically improve. That might sound sociopathic or something <i>(smiles sociopathically)</i>, but it’s what I’ve needed to do, and I’m pretty happy that I’ve been able to do that. Basically I’ve invested all this time in learning how to learn things quick, and I have so many different hobbies, and by now, abilities that I can pull in and find ways to get better at other things quickly. The more we can create analogies, relatable situations—the easier it is to learn something. I have a million of those things now, and they just all build up.</p>
+<p>I’m pretty self aware, and I’ve had to be, just because my brain doesn’t... for example I was never very intelligent socially. I had to basically work on that. In order to just get through, I’ve had to find my weaknesses and systematically improve. That might sound sociopathic or something, [smiles] but it’s what I’ve needed to do, and I’m pretty happy that I’ve been able to do that. Basically I’ve invested all this time in learning how to learn things quick, and I have so many different hobbies, and by now, abilities that I can pull in and find ways to get better at other things quickly. The more we can create analogies, relatable situations—the easier it is to learn something. I have a million of those things now, and they just all build up.</p>
 
 <h3 class="question">Can you share an embarrassing story?</h3>
 
 <p>It was probably... realistically my first improv show. I was doing my first long-form improv show, where we were the people that are required to end our own scenes—they aren’t ended by some kind of person. If you’ve watched “Who’s Line Is It Anyway?”, there are three minute things, then they end them and do something new. Long-form improv involves something like a 15 minute set where your teammates end your scenes, and you keep things moving yourself. This show was just over a year into my improv training, and it was the first class of this 10 month long-form program. We actually found out that class that we had to do a show right after! I was the first one out, and... it was just me and this person, just burning... for minutes. No one was confident enough to end our scene, and I was just there sitting on stage. We weren’t getting laughs... I didn’t understand why yet, because I didn’t... I didn’t see that... I mean clearly we didn’t know who our characters were to each other, we barely knew where we were. There’s all these missing pieces, which we need context for things to be funny, missing all the context. I burned for minutes, and I just got red. The audience, about 40 people in there, just dead silent for minutes. That was hard... but I realized afterwards that it really can’t get worse than that. You can get physical pain that could be worse, emotional pain that could be worse. But in terms of, lets say being in front of a bunch of people, which was actually my goal; to develop presentational and communication skills... I’ve hit the bottom. I’ve had all kinds of tricks now where... worst case, something isn’t going well, I can find a way out of it. With teaching I still say stupid things, but I’m more likely to navigate out of it safely: make a joke out of it, apologize in a funny way or whatever. So that was... that was rough. I’m glad it happened.</p>
 
 <div class="profile_imgs">
-  <a href="{{ page.images }}7.jpg" data-lightbox="daniel-4">
+  <a href="{{ page.images }}7.jpg" data-lightbox="daniel-5">
     <img src="{{ page.images }}7.jpg" alt="sexy boy">
   </a>
 </div>
@@ -182,7 +189,7 @@ quote5: It’s not up to you what entertainment means, it’s up to the entertai
 <p>Really, if you perform enough, you start sensing the crowd, sometimes the crowd... you feel it. People breathe in, and you can actually hear and sense it. If you do enough of that, you start to be okay with it.</p>
 
 <div class="profile_imgs">
-  <a href="{{ page.images }}23.jpg" data-lightbox="daniel-5">
+  <a href="{{ page.images }}23.jpg" data-lightbox="daniel-6">
     <img src="{{ page.images }}23.jpg" alt="sexy boy">
   </a>
 </div>
@@ -193,7 +200,7 @@ quote5: It’s not up to you what entertainment means, it’s up to the entertai
 
 <h3 class="question">Your house containing everything you own, catches fire. After saving your loved ones and pets, you can make a dash to save one item, what would it be, why?</h3>
 
-<p>One item... I like my bed, but I don’t think I can carry it. Maybe toss it off the balcony <i>(laughs)</i>. I always... was kind of raised with stuffed animals; we actually don’t have pets. We have a bunch of stuffed animals that are like, mostly Canadian... there’s like a moose, and a bison, cool stuffed animals. They all have personalities. I’d probably grab them.</p>
+<p>One item... I like my bed, but I don’t think I can carry it. Maybe toss it off the balcony. [laughs] I always... was kind of raised with stuffed animals; we actually don’t have pets. We have a bunch of stuffed animals that are like, mostly Canadian... there’s like a moose, and a bison, cool stuffed animals. They all have personalities. I’d probably grab them.</p>
 
 <h3 class="question">Share a personal problem that you’re going through right now, and how you’re going about to solving that problem.</h3>
 
