finish daniel for reals

--- a/_profiles/96Daniel Moniz.html
+++ b/_profiles/96Daniel Moniz.html
@@ -123,7 +123,7 @@ quote5: It’s not up to you what entertainment means, it’s up to the entertai
 
 <h3 class="question">What is your most terrible memory?</h3>
 
-<p>I think... school was really hard for me, I don’t think I’m a very good student. It could perhaps be ironic that I’m a teacher, and that I demand excellence from my students. I think the problem is that I’m... I want to do my own thing, I always have. If there’s too much guidance, I start to crumble. I start to rebel. This affected me greatly in school. High school it started hitting me; got real depressed. Third year university I had a point where... there were some crazy things in my personal life, and in combination, the hardest courses I ever took were actually in third year, not fourth year. I was just crumbling, and I was asking myself, “What am I doing here?” and just falling apart.</p>
+<p>I think... school was really hard for me, I don’t think I’m a very good student. It could perhaps be ironic that I’m a teacher, and that I demand excellence from my students. I think the problem is that I’m... I want to do my own thing, I always have. If there’s too much guidance, I start to crumble. I start to rebel. This affected me greatly in school. High school it started hitting me—got real depressed. Third year university I had a point where... there were some crazy things in my personal life, and in combination, the hardest courses I ever took were actually in third year, not fourth year. I was just crumbling, and I was asking myself, “What am I doing here?” and just falling apart.</p>
 
 
 
