--- a/_profiles/95Lisa Chan.html
+++ b/_profiles/95Lisa Chan.html
@@ -6,15 +6,14 @@ firstName: Lisa
 lastName: Chan
 occupation:  Occupational Therapist • Entrepreneur
 factCategory: Thing to Do
-factFact: Travelling
+factFact: See the world
 playlistLink:
 
-shadowImage:
 headImage: /assets/images/portraits/lisa_chan/lisa_chan-profile.jpg
 images: /assets/images/portraits/lisa_chan/lisa_chan-
 quote1: When I see children that have very poor self-regulation, I link that to people that I work with.
 quote2: I guess you just date someone and that’s love?
-quote3: I just bawled... and then I was fine.
+quote3: But at the end of the day, we’re all human, deep down we all need to know that we’re appreciated and that people love us.
 quote4: You’re NOT as important to people as you think you are.
 
 ---
@@ -66,7 +65,7 @@ quote4: You’re NOT as important to people as you think you are.
 
 <h3 class="question">What would you constitute as a perfect day, the morning you wake up to when you go to sleep?</h3>
 
-<p>Okay, yeah I have it. So I wake up decently early... I would say seven o’clock? I’d say a perfect day for me is a day where I feel productive. If I wake up at seven, I feel like I’m starting at a good time where I have the morning ahead of me. I wake up, I would make a coffee, a bullet-proof coffee. I would sit on my kitchen table, cause it’s right by my balcony. Outside would be nice, clear and sunny... or I guess the sun is rising or something, I dunno. [laughs] So I have my coffee there and my book, and I’m reading. After that, make a nice breakfast, and probably chill with Luca for a while—just chat with him. Listen to some motivational audios, and then... probably go out. Probably hit up a nice brunch spot, even though I already had breakfast. Then have some fun, adventurous activity, like.. I dunno what that could be. Something random it could be like, a pottery class or some rock climbing.</p>
+<p>Okay, yeah I have it. So I wake up decently early... I would say seven o’clock? I’d say a perfect day for me is a day where I feel productive. If I wake up at seven, I feel like I’m starting at a good time where I have the morning ahead of me. I wake up, I would make a coffee, a bullet-proof coffee. I would sit on my kitchen table, cause it’s right by my balcony. Outside would be nice, clear and sunny... or I guess the sun is rising or something, I dunno. [laughs] So I have my coffee there and my book, and I’m reading. After that, make a nice breakfast, and probably chill with Marco for a while—just chat with him. Listen to some motivational audios, and then... probably go out. Probably hit up a nice brunch spot, even though I already had breakfast. Then have some fun, adventurous activity, like.. I dunno what that could be. Something random it could be like, a pottery class or some rock climbing.</p>
 
 
 <h3 class="question">For what in life do you feel most grateful for?</h3>
@@ -138,7 +137,7 @@ quote4: You’re NOT as important to people as you think you are.
 
 <h3 class="question">What roles do love and affection play in your life?</h3>
 
-<p>I might get a little sappy. [frowns] Background first: I came from a very non-affectionate family, I have never seen my parents kiss or hold hands... maybe one time? So I never really cared about that stuff, and love to me was kind of like, “What is this? I dunno, I guess you just date someone and that’s love?” It wasn’t until I met Luca that I realized what love and affection is, because I could see it. Not just from him, but the way he is with his family... I mean they’re Italian, [laughs] so they’re going to be way more affectionate. To just see how much they show it in their actions was really great to see. When I met them they showed it to me, and I was like, “Wow, this is what it feels like to be... physically hugged very often, or like being kissed on the cheeks on the time.” For sure that’s translated into my relationship with Luca too, he’s a very affectionate person, and I never realized how much I do enjoy that.</p>
+<p>I might get a little sappy. [frowns] Background first: I came from a very non-affectionate family, I have never seen my parents kiss or hold hands... maybe one time? So I never really cared about that stuff, and love to me was kind of like, “What is this? I dunno, I guess you just date someone and that’s love?” It wasn’t until I met Marco that I realized what love and affection is, because I could see it. Not just from him, but the way he is with his family... I mean they’re Italian, [laughs] so they’re going to be way more affectionate. To just see how much they show it in their actions was really great to see. When I met them they showed it to me, and I was like, “Wow, this is what it feels like to be... physically hugged very often, or like being kissed on the cheeks on the time.” For sure that’s translated into my relationship with Marco too, he’s a very affectionate person, and I never realized how much I do enjoy that.</p>
 
 
 <h3 class="question">How close and warm is your family? How is your relationship with each family member?</h3>
@@ -159,26 +158,25 @@ quote4: You’re NOT as important to people as you think you are.
 
 <p>I like that I’m adventurous, that I’m willing to try things. I think that’s gotten me to where I am today, there were many times in the past where I was like, “Man I don’t wanna do this because I’m scared, or something might go wrong.” Then I’m like, “No I’m just gonna do it,” cause I have thoughts like, “What if something great comes out of it?” So that’s what motivates me to do it.</p>
 
+<h3 class="question">When was the last time you cried in front of another person, when was the last time you cried to yourself?</h3>
+
+<p>It definitely happened recently. Okay, so the one in private... was recently, cause my grandpa’s not doing too well, he’s palliative, and we know he has cancer. So for the last few weeks, it’s been pretty hard on my mom, and it wasn’t until probably a week or two ago where it really hit me like, “Oh, he’s really gonna pass away...” I felt like I wasn’t making enough of an effort, I was going to see him, but I wasn’t making enough of an effort, knowing that he’s passing away maybe the next few months or something. So I think I felt guilty in a way, I also was very emotional about what my mom’s going through. I just remember, I was sitting in my car and I was starting to think about it while I was still driving. The tears started coming, my vision got foggy. Luckily I was close to my destination, so I stopped the car and I just bawled... and then I was fine. Then it just kind of passed, but I think it was something that was just building up in me that I didn't realize and it just needed to come out.</p>
+
+<p>In front of someone else, probably in front of Marco, on a similar thing. It’s probably more about my mom though, crying because I felt sorry for her, for what she has to do right now: taking care of my grandparents. My grandpa can be quite hard-headed and quite harsh on her, and I can see how much that’s affecting her, and also my grandma, my grandma she’s a sweet lady, but she’s just more... aggravating my mom, because my mom needs to take care of her, it’s frustrating my mom on so many levels. Also my dad is not helping with the situation, and I think because I’ve been watching her go through all of this, and I’m trying to help her, but I just feel like I’m not able to get through to her, that I felt really upset and just sad.</p>
+
+<h3 class="question">What, if anything is too serious to joke about?</h3>
+
+<p>I don’t think that there’s like, anything too serious to joke about, unless you’re... very insulting with your joke. If you’re joking but low-key being mean about it, I think that’s... yeah.</p>
+
 <div class="quote to-fade-up">
   <hr>
   <h2 class="to-fade-up">"{{ page.quote3 }}"</h2>
   <hr>
 </div>
 
-<h3 class="question">When was the last time you cried in front of another person, when was the last time you cried to yourself?</h3>
-
-<p>It definitely happened recently. Okay, so the one in private... was recently, cause my grandpa’s not doing too well, he’s palliative, and we know he has cancer. So for the last few weeks, it’s been pretty hard on my mom, and it wasn’t until probably a week or two ago where it really hit me like, “Oh, he’s really gonna pass away...” I felt like I wasn’t making enough of an effort, I was going to see him, but I wasn’t making enough of an effort, knowing that he’s passing away maybe the next few months or something. So I think I felt guilty in a way, I also was very emotional about what my mom’s going through. I just remember, I was sitting in my car and I was starting to think about it while I was still driving. The tears started coming, my vision got foggy. Luckily I was close to my destination, so I stopped the car and I just bawled... and then I was fine. Then it just kind of passed, but I think it was something that was just building up in me that I didn't realize and it just needed to come out.</p>
-
-<p>In front of someone else, probably in front of Luca, on a similar thing. It’s probably more about my mom though, crying because I felt sorry for her, for what she has to do right now: taking care of my grandparents. My grandpa can be quite hard-headed and quite harsh on her, and I can see how much that’s affecting her, and also my grandma, my grandma she’s a sweet lady, but she’s just more... aggravating my mom, because my mom needs to take care of her, it’s frustrating my mom on so many levels. Also my dad is not helping with the situation, and I think because I’ve been watching her go through all of this, and I’m trying to help her, but I just feel like I’m not able to get through to her, that I felt really upset and just sad.</p>
-
-<h3 class="question">What, if anything is too serious to joke about?</h3>
-
-<p>I don’t think that there’s like, anything too serious to joke about, unless you’re... very insulting with your joke. If you’re joking but low-key being mean about it, I think that’s... yeah.</p>
-
-
 <h3 class="question">If you were to die this evening with no opportunity to communicate with anyone, what would you regret most not having told someone, and why haven’t you told them?</h3>
 
-<p>Probably something to my dad. Something to do with showing my appreciation to him, because we are so distant, and we lack a lot of communication in our family. I think that’s something that I don’t really do... where I show him... I really do appreciate everything he has done for me, despite all the stuff that’s happened between our family. I think he needs to hear it sometimes, he’s a very independent, solo type of person seems like, “Ohh it doesn’t matter what people say to me, I’m fine.” But at the end of the day, we’re all human, deep down we all need to know that we’re appreciated and that people love is. I don’t think I tell him that.</p>
+<p>Probably something to my dad. Something to do with showing my appreciation to him, because we are so distant, and we lack a lot of communication in our family. I think that’s something that I don’t really do... where I show him... I really do appreciate everything he has done for me, despite all the stuff that’s happened between our family. I think he needs to hear it sometimes, he’s a very independent, solo type of person seems like, “Ohh it doesn’t matter what people say to me, I’m fine.” But at the end of the day, we’re all human, deep down we all need to know that we’re appreciated and that people love us. I don’t think I tell him that.</p>
 
 <div class="profile_imgs">
   <a href="{{ page.images }}3.jpg" data-lightbox="lisa-6">
